--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,78 +27,93 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1  # Adjust region as needed
 
-      - name: Create S3 Bucket for Terraform State
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.5.0
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
+
+      - name: Terraform Plan
+        id: terraform-plan
+        run: terraform plan
+        working-directory: ./terraform
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Terraform Apply
+        if: github.event.inputs.action == 'apply'
+        run: terraform apply -auto-approve tfplan
+        working-directory: ./terraform
+
+      - name: Terraform Destroy
+        if: github.event.inputs.action == 'destroy'
+        run: terraform destroy -auto-approve
+        working-directory: ./terraform
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_KEY }}
+
+      - name: Update and Install Dependencies
         run: |
-          aws s3api create-bucket \
-            --bucket medusa-terraform-state-bucket \
-            --region ap-south-1
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            # Update and install necessary packages
+            sudo apt-get update -y
+            sudo apt-get upgrade -y
+            
+            # Install Node.js 18.x
+            curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+            sudo apt install -y nodejs
+            
+            # Install PostgreSQL
+            sudo apt install -y postgresql postgresql-contrib
+            sudo systemctl start postgresql
 
-          # Enable versioning on the S3 bucket
-          aws s3api put-bucket-versioning \
-            --bucket medusa-terraform-state-bucket \
-            --versioning-configuration Status=Enabled
+            # Set up PostgreSQL database and user if not already created
+            sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = 'medusabackend') THEN CREATE USER medusabackend WITH PASSWORD 'medusa123'; END IF; END \$\$;"
+            sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = 'medusabackend') THEN CREATE DATABASE medusabackend; END IF; END \$\$;"
+            sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE medusabackend TO medusabackend;"
+            sudo -u postgres psql -c "ALTER USER medusabackend CREATEDB;"
+            sudo -u postgres psql -c "ALTER DATABASE medusabackend OWNER TO medusabackend;"
 
-      - name: Check and Create DynamoDB Table for Terraform Lock
-        run: |
-          TABLE_NAME="terraform-lock-table"
-          aws dynamodb create-table \
-              --table-name $TABLE_NAME \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5 \
-              --region ap-south-1
-          # TABLE_EXISTS=$(aws dynamodb list-tables --region ap-south-1 --query "TableNames" --output text | grep -w $TABLE_NAME)
 
-          # if [ -z "$TABLE_EXISTS" ]; then
-          #   echo "Table does not exist. Creating the table..."
-          #   aws dynamodb create-table \
-          #     --table-name $TABLE_NAME \
-          #     --attribute-definitions AttributeName=LockID,AttributeType=S \
-          #     --key-schema AttributeName=LockID,KeyType=HASH \
-          #     --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5 \
-          #     --region ap-south-1
-          # else
-          #   echo "Table already exists. Skipping creation."
-          # fi
+            # Remove the existing directory if it exists
+            if [ -d "./my-app-store" ]; then
+              sudo rm -rf ./my-app-store
+            fi
 
-      - name: Verify S3 Bucket and DynamoDB Table Creation
-        run: |
-          echo "Checking if S3 bucket and DynamoDB table exist..."
+            # Clone the existing Medusa app repository using HTTPS
+            git clone https://github.com/palemanudeep/Deploy-Medusa-on-AWS-EC2.git ./my-app-store
+            
+            # Navigate to the app directory
+            cd ./my-app-store
 
-          aws s3api head-bucket --bucket medusa-terraform-state-bucket
+            # Create .env file if it does not exist
+            touch .env
+            
+            # Modify the .env file
+            echo "DATABASE_URL=postgres://medusabackend:medusa123@localhost:5432/medusabackend" > .env
+            echo "REDIS_URL=redis://localhost:6379" >> .env
 
-          aws dynamodb describe-table --table-name terraform-lock-table
+            # Install dependencies
+            sudo npm install -g @medusajs/medusa-cli
+            npm install cross-env --save-dev
+            npx medusa migrations run
+            npx medusa user -e anudeep@gmail.com -p anudeep123
 
-      # - name: Setup Terraform
-      #   uses: hashicorp/setup-terraform@v1
-      #   with:
-      #     terraform_version: 1.5.0
 
-      # - name: Terraform Init
-      #   run: terraform init
-      #   working-directory: ./terraform
+            # Start the application
+            sudo npm run start &
+          EOF
 
-      # - name: Terraform Plan
-      #   id: terraform-plan
-      #   run: terraform plan -var="db_username=${{ secrets.DB_USERNAME }}" -var="db_password=${{ secrets.DB_PASSWORD }}" -out=tfplan
-      #   working-directory: ./terraform
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
-      # - name: Terraform Apply
-      #   if: github.event.inputs.action == 'apply'
-      #   run: terraform apply -auto-approve tfplan
-      #   working-directory: ./terraform
-
-      # - name: Terraform Destroy
-      #   if: github.event.inputs.action == 'destroy'
-      #   run: terraform destroy -auto-approve -var="db_username=${{ secrets.DB_USERNAME }}" -var="db_password=${{ secrets.DB_PASSWORD }}"
-      #   working-directory: ./terraform
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
