--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,16 +71,12 @@ jobs:
       - name: Read EC2 Outputs
         id: ec2_outputs
         run: |
-          echo "EC2_HOST=$(jq -r '.ec2_public_ip.value' outputs.json)" >> $GITHUB_ENV
-          echo "EC2_USER=$(jq -r '.ec2_ssh_user.value' outputs.json)" >> $GITHUB_ENV
-          echo "EC2_PORT=$(jq -r '.ec2_ssh_port.value' outputs.json)" >> $GITHUB_ENV
-
+          echo "EC2_HOST=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
+          echo "EC2_USER=$(terraform output -raw ec2_ssh_user)" >> $GITHUB_ENV
 
       - name: Update and Install Dependencies
         run: |
-          echo "${{ secrets.EC2_KEY }}" > my_key.pem
-          chmod 600 my_key.pem  # Ensure proper permissions
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -p ${{ env.EC2_PORT }} ${{ env.EC2_USER }}@${{ env.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 ${{ env.EC2_USER }}@${{ env.EC2_HOST }} << 'EOF'
             # Update and install necessary packages
             sudo apt-get update -y
             sudo apt-get upgrade -y
